@@ -1,3 +1,11 @@
+2008-05-31  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keybinding-properties.c: (append_keys_to_tree),
+	(parse_start_tag), (append_keys_to_tree_from_file),
+	(append_keys_to_tree_from_gconf), (reload_key_entries): add
+	initial support for editing custom shortcuts (bug #114796).
+	Adding/deleting shortcuts is not yet possible
+
 2008-05-29  William Jon McCann  <jmccann@redhat.com>
 
 	* eggcellrendererkeys.c (egg_cell_renderer_keys_class_init):
